# AMG

./: .GOVERNANCE_QUICKSTART.md.swp  .gitignore  API_AUTHENTICATION_DEPLOYMENT.md  ARCHITECTURE.md  CISO_SECURITY_QUESTIONNAIRE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_BUILDER_GUIDE.md  DOCUMENTATION_INDEX.md  GOVERNANCE.md  GOVERNANCE_DIAGRAM.md  GOVERNANCE_MODEL.md  GOVERNANCE_QUICKSTART.md  GRAFANA_DASHBOARDS.md  GRAFANA_SUBDOMAIN_SETUP.md  GRAFANA_VISUALIZATION_GUIDE.md  HTTPS_DEPLOYMENT_COMPLETE.md  IMPLEMENTATION.md  ISO_27001_MAPPING.md  PROJECT_COMPLETION.md  README.md  SECURITY.md  THREAT_MODEL.md  USER_GUIDES.md  amg-api-https.conf  amg-api.service  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  setup-grafana.sh  setup-https.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: amg-api-fixed.conf  amg-api-https.conf  iam.nginx  keycloak-docker-compose.yml  langflow.nginx  policy.yaml
docs/: INDEX.md
docs/architecture/: ARCHITECTURE.md  IMPLEMENTATION.md
docs/dashboards/: GRAFANA_DASHBOARDS.md  GRAFANA_INSTALLATION_COMPLETE.md  GRAFANA_SETUP.md
docs/deployment/: API_AUTHENTICATION_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  HTTPS_DEPLOYMENT_COMPLETE.md  HTTPS_SETUP.md
docs/governance/: POLICY_SCHEMA.md
examples/: basic_agent.py  langchain_remote.py  langflow_helper.py  langgraph_integration.py  langgraph_remote.py  populate_data.py
scripts/: live_test_stream.py  setup-amg-grafana.sh  setup-grafana.sh
tests/: conftest.py  test_api.py  test_api_authentication.py  test_external_adapters.py  test_governance.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_memory_store.py  test_postgres_adapter.py  test_vector_support.py
(+33 files in other folders)
