[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amg"
version = "0.1.0"
description = "Agent Memory Governance - Governance-first memory control plane for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "AMG Contributors", email = "info@amg.dev"}
]
keywords = [
    "agent",
    "memory",
    "governance",
    "compliance",
    "audit",
    "control-plane",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ugenkudupudiqbnox/AMG"
Repository = "https://github.com/ugenkudupudiqbnox/AMG.git"
Documentation = "https://github.com/ugenkudupudiqbnox/AMG"
Issues = "https://github.com/ugenkudupudiqbnox/AMG/issues"

[tool.setuptools]
packages = ["amg", "amg.adapters"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
